--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
 							a set
 							of design interventions brought together as an effective and fun campaign aimed at providing
 							food-based dye. Nafisa was truly committed to her topic, which resulted in
-							her stellar performance in the course. It was a pleasure seeing her thrive. In sum, Ashley
+							her stellar performance in the course. It was a pleasure seeing her thrive. In sum, Nafisa
 							is a motivated designer who strives to excel, and genuinely cares for environmental and
 							societal issues."</i></p>
 
